--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <module>guli-order</module>
         <module>guli-ware</module>
         <module>guli-product</module>
+        <module>guli-gateway</module>
+
         <module>renren-fast</module>
         <module>renren-generator</module>
     </modules>
