--- a/guli-product/src/main/resources/application.yaml
+++ b/guli-product/src/main/resources/application.yaml
@@ -4,6 +4,13 @@ spring:
     username: root
     password: mypassword123
     driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+
+  application:
+    name: guli-product
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
