--- a/guli-gateway/src/main/resources/application.yaml
+++ b/guli-gateway/src/main/resources/application.yaml
@@ -1,8 +1,15 @@
 spring:
+  application:
+    name: guli-gateway
   cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+
     gateway:
       routes:
-        - id: test_route
+        - id: te.
+        - st_route
           uri: https://www.baidu.com
           predicates:
             - Query=url, baidu
@@ -10,3 +17,9 @@ spring:
           uri: https://www.qq.com
           predicates:
             - Query=url, qq
+        - id: admin_route
+          uri: lb://renren-fast
+          predicates:
+            - Path=/api/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
