--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<version>2.4.0</version>
 	</parent>
 
 	<properties>
@@ -51,6 +51,14 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.uptown.guli</groupId>
+			<artifactId>guli-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
