--- a/guli-gateway/src/main/resources/application.yaml
+++ b/guli-gateway/src/main/resources/application.yaml
@@ -1,3 +1,5 @@
+server:
+  port: 88
 spring:
   application:
     name: guli-gateway
@@ -8,18 +10,20 @@ spring:
 
     gateway:
       routes:
-        - id: te.
-        - st_route
+        - id: test_route
           uri: https://www.baidu.com
           predicates:
             - Query=url, baidu
+
         - id: qq_route
           uri: https://www.qq.com
           predicates:
             - Query=url, qq
+
         - id: admin_route
           uri: lb://renren-fast
           predicates:
             - Path=/api/**
           filters:
             - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
+
