--- a/guli-gateway/src/main/resources/bootstrap.yaml
+++ b/guli-gateway/src/main/resources/bootstrap.yaml
@@ -1,4 +1,4 @@
 spring.application.name=guli-gateway
-#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+
+spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 #spring.cloud.nacos.config.namespace=6b772601-ca76-40fc-8159-3ba884805f5e
-server.port=88
