--- a/guli-gateway/src/main/resources/application.yaml
+++ b/guli-gateway/src/main/resources/application.yaml
@@ -1,5 +1,14 @@
 server:
   port: 88
+
+logging:
+  level:
+    org:
+      springframework:
+        cloud:
+          gateway:
+            filter:
+              LoadBalancerClientFilter=TRACE
 spring:
   application:
     name: guli-gateway
@@ -20,10 +29,19 @@ spring:
           predicates:
             - Query=url, qq
 
+        - id: product_route
+          uri: lb://guli-product
+          predicates:
+            - Path=/api/product/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/$\{segment}
+
         - id: admin_route
           uri: lb://renren-fast
           predicates:
             - Path=/api/**
           filters:
             - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
+
+
 
