--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,16 @@
         <module>renren-fast</module>
         <module>renren-generator</module>
     </modules>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+            <version>2.1.0.RELEASE</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+
 </project>
