--- a/guli-third-party/src/main/resources/bootstrap.properties
+++ b/guli-third-party/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
-spring.application.name=guli-third-party
+spring.cloud.nacos.config.name=guli-third-party
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-spring.cloud.nacos.discovery.namespace=a2a1f02a-749e-4670-a53c-76cd83b6b081
+spring.cloud.nacos.config.namespace=a2a1f02a-749e-4670-a53c-76cd83b6b081
 
 spring.cloud.nacos.config.ext-config[0].data-id=oss.yml
 spring.cloud.nacos.config.ext-config[0].group=DEFAULT_GROUP
