--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.0</version>
-    </parent>
 
     <groupId>com.uptown.guli</groupId>
     <artifactId>guli-mall</artifactId>
@@ -24,20 +19,10 @@
         <module>guli-ware</module>
         <module>guli-product</module>
         <module>guli-gateway</module>
-
+        <module>guli-third-party</module>
         <module>renren-fast</module>
         <module>renren-generator</module>
     </modules>
 
-
-    <dependencies>
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-            <version>2.1.0.RELEASE</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-    </dependencies>
 
 </project>
