--- a/guli-third-party/src/main/resources/application.yaml
+++ b/guli-third-party/src/main/resources/application.yaml
@@ -4,11 +4,12 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
 
-  #    alicloud:
-  #      access-key: LTAI4G9niwzj7HGqPruhYFwX
-  #      secret-key: fMJj2CQULqH1fAderxYhiWTJQGoNqt
-  #      oss:
-  #        endpoint: http://oss-cn-beijing.aliyuncs.com
+    alicloud:
+      access-key: LTAI4G9niwzj7HGqPruhYFwX
+      secret-key: fMJj2CQULqH1fAderxYhiWTJQGoNqt
+      oss:
+        endpoint: http://oss-cn-beijing.aliyuncs.com
+        bucket: guli-uptown
 
   application:
     name: guli-third-party
